2010-05-23 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c (ReadTXTImage): Ability to read multiple images.

2010-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): 'K' channel was always
	output as black for "CMYK" specification unless image matte flag
	was True.  Bug report and proposed solution by Lance Brown.

2010-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (ShearImage): When one of the shear angles was
	specified as zero, the shear request was ignored entirely.  An
	simple optimization was using || rather than && to test the
	angles.  Resolves SourceForge issue #2991685 "Shear command does
	not handle zero angles correctly".

2010-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick, DestroyMagick):
	InitializeMagick and DestroyMagick should be fully thread safe.

2010-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Set the opacity value of the opaque
	color to transparent.  Patch by Tim Baker.

	* magick/image.c (SetImageColor): New function which is similar to
	SetImage() but which accepts the pixel color as a parameter rather
	than using the image background color.  Patch by Tim Baker.

	* magick/transform.c (CoalesceImages): When applying background
	disposal, fill the image with the transparent color, if one
	exists.  Patch by Tim Baker.  Resolves SourceForge patch ID
	2989472.

2010-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Matte channel was not being enabled
	for non-opaque images.
	(ReadTXTImage): Opacity values need to be inverted prior to
	ingestion.

2010-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Documentation for -flatten and -mosaic has
	been improved.

	* magick/transform.c (MosaicImages): The -mosaic command now
	respects the composition option specified by -compose as well as