@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020100520"
+#define public MagickPackageVersionAddendum ".020100523"
 #define public MagickPackageReleaseDate "unreleased"
