@@ -21,6 +21,22 @@
 </tr>
 </table>
 <p>
+2010-05-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/Magick++/Image.rst: Fix documentation error which wrongly
+        recommended multiplication by size of PixelPacket.  Correction by
+        Roel Baardman.
+
+</UL>
+<p>
+2010-05-23 Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> coders/txt.c (ReadTXTImage): Ability to read multiple images.
+
+</UL>
+<p>
 2010-05-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
